forced inlining of functions that are intended to be called before _and_ after copy. Added compiler warning if that fails (-Winline)

--- a/BaS_gcc/Makefile
+++ b/BaS_gcc/Makefile
@@ -32,6 +32,7 @@ CFLAGS=-mcpu=5474\
 	   -Wall\
 	   -g\
 	   -Wno-multichar\
+	   -Winline\
 	   -Os\
 	   -fomit-frame-pointer\
 	   -fno-strict-aliasing\
