Added support for long filenames. Does not work yet

--- a/BaS_gcc/Makefile
+++ b/BaS_gcc/Makefile
@@ -61,6 +61,7 @@ CSRCS= \
 	$(SRCDIR)/BaS.c \
 	$(SRCDIR)/cache.c \
 	$(SRCDIR)/mmcbb.c \
+	$(SRCDIR)/unicode.c \
 	$(SRCDIR)/ff.c \
 	$(SRCDIR)/wait.c
 
