--- a/BaS_gcc/bas.lk.in
+++ b/BaS_gcc/bas.lk.in
@@ -13,7 +13,6 @@ SECTIONS
 		objs/sysinit.o(.text)
 		objs/init_fpga.o(.text)
 		objs/wait.o(.text)
-		objs/mmcbb.o(.text)
 		
 #if (FORMAT == elf32-m68k)
 		*(.rodata)
@@ -31,9 +30,9 @@ SECTIONS
 	{
 		objs/BaS.o(.text)
 		/* put other routines into the same segment (RAM) as BaS.o */ 
-		objs/ccsbcs.o(.text)
+		objs/unicode.o(.text)
+		objs/mmc.o(.text)
 		objs/ff.o(.text)
-		objs/sd_card_asm.o(.text)
 		objs/bas_printf.o(.text)
 		objs/printf_helper.o(.text)
 		objs/cache.o(.text)
