--- a/FPGA_quartus_GE/firebee1.qsf
+++ b/FPGA_quartus_GE/firebee1.qsf
@@ -736,24 +736,21 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
-set_global_assignment -name VERILOG_FILE Video/DDR_CTR.v
-set_global_assignment -name VERILOG_FILE Video/VIDEO_MOD_MUX_CLUTCTR.v
-set_global_assignment -name VERILOG_FILE Interrupt_Handler/interrupt_handler.v
-set_global_assignment -name VERILOG_FILE mux41.v
-set_global_assignment -name VERILOG_FILE Video/video.v
 set_global_assignment -name VERILOG_FILE firebee1.v
 set_global_assignment -name SDC_FILE firebee1.sdc
+set_global_assignment -name VERILOG_FILE Video/video.v
+set_global_assignment -name VERILOG_FILE Video/DDR_CTR.v
+set_global_assignment -name VERILOG_FILE Video/VIDEO_MOD_MUX_CLUTCTR.v
+set_global_assignment -name VHDL_FILE Video/BLITTER/BLITTER.vhd
+set_global_assignment -name VERILOG_FILE Interrupt_Handler/interrupt_handler.v
 set_global_assignment -name VHDL_FILE DSP/DSP.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/FalconIO_SDCard_IDE_CF.vhd
-set_global_assignment -name VHDL_FILE Video/BLITTER/BLITTER.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF5380/wf5380_control.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF5380/wf5380_pkg.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF5380/wf5380_registers.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF5380/wf5380_soc_top.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF5380/wf5380_top.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_FDC1772_IP/wf1772ip_am_detector.vhd
-set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/dcfifo0.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_bustri0.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_FDC1772_IP/wf1772ip_control.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_FDC1772_IP/wf1772ip_crc_logic.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_FDC1772_IP/wf1772ip_digital_pll.vhd
@@ -762,9 +759,7 @@ set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_FDC1772_IP/wf177
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_FDC1772_IP/wf1772ip_top.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_FDC1772_IP/wf1772ip_top_soc.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_FDC1772_IP/wf1772ip_transceiver.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_bustri5.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_UART6850_IP/wf6850ip_ctrl_status.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_bustri7.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_UART6850_IP/wf6850ip_receive.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_UART6850_IP/wf6850ip_top.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_UART6850_IP/wf6850ip_top_soc.vhd
@@ -783,70 +778,49 @@ set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_SND2149_IP/wf214
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_SND2149_IP/wf2149ip_top.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_SND2149_IP/wf2149ip_top_soc.vhd
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/WF_SND2149_IP/wf2149ip_wave.vhd
-set_global_assignment -name VHDL_FILE lpm_latch0.vhd
-set_global_assignment -name QIP_FILE altpll1.qip
-set_global_assignment -name VHDL_FILE Video/lpm_fifoDZ.vhd
-set_global_assignment -name QIP_FILE altpll2.qip
-set_global_assignment -name QIP_FILE altpll3.qip
-set_global_assignment -name VHDL_FILE Video/altdpram0.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_muxDZ2.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_muxDZ.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_bustri3.vhd
-set_global_assignment -name VHDL_FILE altpll2.vhd
-set_global_assignment -name VHDL_FILE altpll3.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_ff0.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_ff1.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_ff3.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_ff2.vhd
-set_global_assignment -name VHDL_FILE Video/lpm_fifo_dc0.vhd
-set_global_assignment -name VHDL_FILE altpll1.vhd
-set_global_assignment -name QIP_FILE altpll0.qip
-set_global_assignment -name QIP_FILE lpm_counter0.qip
-set_global_assignment -name QIP_FILE Video/lpm_shiftreg0.qip
-set_global_assignment -name QIP_FILE Video/altdpram0.qip
-set_global_assignment -name QIP_FILE Video/lpm_bustri1.qip
-set_global_assignment -name QIP_FILE Video/altdpram1.qip
-set_global_assignment -name QIP_FILE Video/lpm_bustri2.qip
-set_global_assignment -name QIP_FILE Video/lpm_bustri4.qip
-set_global_assignment -name QIP_FILE Video/lpm_constant0.qip
-set_global_assignment -name QIP_FILE Video/lpm_constant1.qip
-set_global_assignment -name QIP_FILE Video/lpm_mux0.qip
-set_global_assignment -name QIP_FILE Video/lpm_mux1.qip
-set_global_assignment -name QIP_FILE Video/lpm_mux2.qip
-set_global_assignment -name QIP_FILE Video/lpm_constant2.qip
-set_global_assignment -name QIP_FILE Video/altdpram2.qip
-set_global_assignment -name QIP_FILE Video/lpm_bustri6.qip
-set_global_assignment -name QIP_FILE Video/lpm_mux3.qip
-set_global_assignment -name QIP_FILE Video/lpm_mux4.qip
-set_global_assignment -name QIP_FILE Video/lpm_constant3.qip
-set_global_assignment -name QIP_FILE Video/lpm_shiftreg1.qip
-set_global_assignment -name QIP_FILE Video/lpm_latch1.qip
-set_global_assignment -name QIP_FILE Video/lpm_constant4.qip
-set_global_assignment -name QIP_FILE Video/lpm_shiftreg2.qip
-set_global_assignment -name QIP_FILE Video/lpm_compare1.qip
-set_global_assignment -name QIP_FILE lpm_bustri_LONG.qip
-set_global_assignment -name QIP_FILE lpm_bustri_BYT.qip
-set_global_assignment -name QIP_FILE lpm_bustri_WORD.qip
-set_global_assignment -name QIP_FILE Video/lpm_ff4.qip
-set_global_assignment -name QIP_FILE Video/lpm_ff5.qip
-set_global_assignment -name QIP_FILE Video/lpm_ff6.qip
-set_global_assignment -name VECTOR_WAVEFORM_FILE firebee1.vwf
-set_global_assignment -name QIP_FILE Video/lpm_shiftreg3.qip
-set_global_assignment -name QIP_FILE Video/altddio_bidir0.qip
-set_global_assignment -name QIP_FILE Video/altddio_out0.qip
-set_global_assignment -name QIP_FILE Video/lpm_mux5.qip
-set_global_assignment -name QIP_FILE Video/lpm_shiftreg5.qip
-set_global_assignment -name QIP_FILE Video/lpm_shiftreg6.qip
-set_global_assignment -name QIP_FILE Video/lpm_shiftreg4.qip
-set_global_assignment -name QIP_FILE Video/altddio_out1.qip
-set_global_assignment -name QIP_FILE Video/altddio_out2.qip
-set_global_assignment -name QIP_FILE altddio_out3.qip
-set_global_assignment -name QIP_FILE Video/lpm_mux6.qip
 set_global_assignment -name VHDL_FILE FalconIO_SDCard_IDE_CF/FalconIO_SDCard_IDE_CF_pgk.vhd
-set_global_assignment -name QIP_FILE FalconIO_SDCard_IDE_CF/dcfifo0.qip
-set_global_assignment -name QIP_FILE FalconIO_SDCard_IDE_CF/dcfifo1.qip
-set_global_assignment -name QIP_FILE Video/lpm_muxDZ.qip
-set_global_assignment -name QIP_FILE Video/lpm_muxVDM.qip
-set_global_assignment -name QIP_FILE altpll_reconfig1.qip
-set_global_assignment -name QIP_FILE altpll4.qip
+set_global_assignment -name VERILOG_FILE lpm_ffs.v
+set_global_assignment -name VERILOG_FILE mux41.v
+set_global_assignment -name QIP_FILE altip/altddio_bidir0.qip
+set_global_assignment -name QIP_FILE altip/altddio_out0.qip
+set_global_assignment -name QIP_FILE altip/altddio_out1.qip
+set_global_assignment -name QIP_FILE altip/altddio_out2.qip
+set_global_assignment -name QIP_FILE altip/lpm_compare1.qip
+set_global_assignment -name QIP_FILE altip/lpm_constant0.qip
+set_global_assignment -name QIP_FILE altip/lpm_constant1.qip
+set_global_assignment -name QIP_FILE altip/lpm_constant2.qip
+set_global_assignment -name QIP_FILE altip/lpm_constant3.qip
+set_global_assignment -name QIP_FILE altip/lpm_constant4.qip
+set_global_assignment -name QIP_FILE altip/lpm_mux0.qip
+set_global_assignment -name QIP_FILE altip/lpm_mux1.qip
+set_global_assignment -name QIP_FILE altip/lpm_mux2.qip
+set_global_assignment -name QIP_FILE altip/lpm_mux3.qip
+set_global_assignment -name QIP_FILE altip/lpm_mux4.qip
+set_global_assignment -name QIP_FILE altip/lpm_mux5.qip
+set_global_assignment -name QIP_FILE altip/lpm_mux6.qip
+set_global_assignment -name QIP_FILE altip/lpm_muxDZ.qip
+set_global_assignment -name QIP_FILE altip/lpm_muxDZ2.qip
+set_global_assignment -name QIP_FILE altip/lpm_muxVDM.qip
+set_global_assignment -name QIP_FILE altip/lpm_shiftreg0.qip
+set_global_assignment -name QIP_FILE altip/lpm_shiftreg1.qip
+set_global_assignment -name QIP_FILE altip/lpm_shiftreg2.qip
+set_global_assignment -name QIP_FILE altip/lpm_shiftreg3.qip
+set_global_assignment -name QIP_FILE altip/lpm_shiftreg4.qip
+set_global_assignment -name QIP_FILE altip/lpm_shiftreg5.qip
+set_global_assignment -name QIP_FILE altip/lpm_shiftreg6.qip
+set_global_assignment -name QIP_FILE altip/altddio_out3.qip
+set_global_assignment -name QIP_FILE altip/altpll_reconfig1.qip
+set_global_assignment -name QIP_FILE altip/altpll0.qip
+set_global_assignment -name QIP_FILE altip/altpll1.qip
+set_global_assignment -name QIP_FILE altip/altpll2.qip
+set_global_assignment -name QIP_FILE altip/altpll3.qip
+set_global_assignment -name QIP_FILE altip/altpll4.qip
+set_global_assignment -name QIP_FILE altip/lpm_counter0.qip
+set_global_assignment -name QIP_FILE altip/altdpram0.qip
+set_global_assignment -name QIP_FILE altip/altdpram1.qip
+set_global_assignment -name QIP_FILE altip/altdpram2.qip
+set_global_assignment -name QIP_FILE altip/lpm_fifo_dc0.qip
+set_global_assignment -name QIP_FILE altip/lpm_fifoDZ.qip
+set_global_assignment -name QIP_FILE altip/dcfifo0.qip
+set_global_assignment -name QIP_FILE altip/dcfifo1.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
