--- a/vhdl/backend/Altera/Firebee/firebee.qsf
+++ b/vhdl/backend/Altera/Firebee/firebee.qsf
@@ -673,4 +673,6 @@ set_global_assignment -name VHDL_FILE ../../../rtl/vhdl/Firebee_V1/Firebee_V1_pk
 set_global_assignment -name QIP_FILE ../../../rtl/vhdl/Firebee_V1/altpll_reconfig1.qip
 set_global_assignment -name VHDL_FILE ../../../testbenches/ddr_ram_model.vhd
 set_global_assignment -name TIMEQUEST_DO_REPORT_TIMING ON
+set_global_assignment -name RTLV_REMOVE_FANOUT_FREE_REGISTERS OFF
+set_global_assignment -name RTLV_SIMPLIFIED_LOGIC OFF
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
